--- a/querryl/templates/search.html
+++ b/querryl/templates/search.html
@@ -4,6 +4,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
         <link rel="stylesheet" href="../static/css/search.css" type="text/css" />
+        <link rel="stylesheet" href="../static/css/search-dark.css" type="text/css" />
         <link rel="stylesheet" href="../static/css/alertify.css" />
         <link rel="stylesheet" href="../static/css/alertify.default.css" id="toggleCSS" />
         <script src="../static/js/jquery-1.9.1.min.js"></script>
@@ -22,24 +23,38 @@
 
         <div id="search">
             <form id="search-form" action="" accept-charset="utf-8" onSubmit="return Querryl.handleSubmit(this)">
-                Search: <input id="query" type="text" name="query"></input>
-                Channel: <input type="text" name="channel"></input>
+                Search: <input id="query" type="text" name="query"></input> |
+                Channel: <input type="text" name="channel"></input> |
                 Network: <select name="networkid" id="network-select">
                             <option data-each-network="networks" value="" data-value="network.networkid" data-text="network.networkname"></option>
                          </select>
                 <input id="search-button" type="submit" value="Search"></input>
             </form>
+            <hr />
             <ul id="search-results"></ul>
         </div>
         <div id="settings">
             <h3>
                 Settings
             </h3>
-            Date: <input type='checkbox' name='date' data-checked='settings.date'></input>
-            Time: <input type='checkbox' name='time' data-checked='settings.time'></input>
-            Seperator: <input type='input' name='seperator' data-value='settings.seperator'></input>
-            Surround: <input type='input' name='leftBracket' data-value='settings.leftBracket'></input> nickname <input type='input' name='rightBracket' data-value='settings.rightBracket'></input>
-            Backlog: <input type='input' name='backlog' data-value='settings.backlogLimit'></input>
+            <div>
+                Date: <input type='checkbox' name='date' data-checked='settings.date'></input>
+            </div>
+            <div>
+                Time: <input type='checkbox' name='time' data-checked='settings.time'></input>
+            </div>
+            <div>
+                Seperator: <input type='input' name='seperator' data-value='settings.seperator'></input>
+            </div>
+            <div>
+                Nick Prefix: <input type='input' name='leftBracket' data-value='settings.leftBracket'></input>
+            </div>
+            <div>
+                Nick Suffix: <input type='input' name='rightBracket' data-value='settings.rightBracket'></input>
+            </div>
+            <div>
+                Backlog: <input type='input' name='backlog' data-value='settings.backlogLimit'></input>
+            </div>
         </div>
     </body>
 </html>
