Remove weird spaces

--- a/querryl/templates/login.html
+++ b/querryl/templates/login.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <title>Querryl - Login</title>
-        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <link rel="stylesheet" href="../static/css/login.css" type="text/css" />
+        <title>Querryl - login</title>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+        <link rel="stylesheet" href="../static/css/login.css" type="text/css"/>
         <script src="../static/js/jquery-1.9.1.min.js"></script>
         <script src="../static/js/login.js"></script>
     </head>
@@ -12,11 +12,11 @@
                 <table border="0">
                     <tr>
                         <td>username:</td>
-                        <td> <input id="username" type="text" name="username" /> </td>
+                        <td><input id="username" type="text" name="username"/></td>
                     </tr>
                     <tr>
                         <td>password:</td>
-                        <td><input type="password" name="password" /></td>
+                        <td><input type="password" name="password"/></td>
                     </tr>
                 </table>
                 <div class="login-button-container">
